--- a/xapian-applications/omega/configure.ac
+++ b/xapian-applications/omega/configure.ac
@@ -261,6 +261,11 @@ PKG_CHECK_MODULES([POPPLER], [poppler-cpp], [
                      OMINDEX_MODULES="$OMINDEX_MODULES omindex_pdf"])
      LIBS=$save_LIBS],[ ])
 
+dnl check if libetonyek is available.
+PKG_CHECK_MODULES([LIBETONYEK], [libetonyek-0.1,librevenge-0.0,librevenge-generators-0.0,librevenge-stream-0.0], [
+                  AC_DEFINE(HAVE_LIBETONYEK, 1, [Define HAVE_LIBETONYEK if the library is available])
+                  OMINDEX_MODULES="$OMINDEX_MODULES omindex_key omindex_numbers omindex_pages"],[ ])
+
 AC_SUBST([OMINDEX_MODULES])
 
 dnl Check that snprintf actually works as it's meant to.
