--- a/xapian-applications/omega/Makefile.am
+++ b/xapian-applications/omega/Makefile.am
@@ -44,7 +44,7 @@ BUILT_SOURCES = extra/omegascript.vim my-html-tok.h mimemap.h namedents.h
 
 MAINTAINERCLEANFILES = my-html-tok.h mimemap.h mimemap.stamp namedents.h
 
-EXTRA_PROGRAMS = omindex_poppler omindex_libebook omindex_libetonyek omindex_tesseract omindex_gmime
+EXTRA_PROGRAMS = omindex_gmime omindex_libebook omindex_libetonyek omindex_markdown omindex_poppler omindex_tesseract
 
 EXTRA_DIST =\
 	clickmodel/testdata/test1.log\
@@ -196,6 +196,10 @@ omindex_tesseract_CXXFLAGS = $(TESSERACT_CFLAGS)
 omindex_gmime_SOURCES = assistant.cc worker_comms.cc myhtmlparse.cc datetime.cc htmlparse.cc common/keyword.cc handler_gmime.cc
 omindex_gmime_LDADD = $(GMIME_LIBS) libutf8convert.la
 omindex_gmime_CXXFLAGS = $(GMIME_CFLAGS) $(XAPIAN_CXXFLAGS)
+
+omindex_markdown_SOURCES = assistant.cc worker_comms.cc myhtmlparse.cc datetime.cc htmlparse.cc common/keyword.cc handler_markdown.cc
+omindex_markdown_LDADD = $(MARKDOWN_LIBS) libutf8convert.la
+omindex_markdown_CXXFLAGS = $(MARKDOWN_CFLAGS) $(XAPIAN_CXXFLAGS)
 
 scriptindex_SOURCES = scriptindex.cc myhtmlparse.cc htmlparse.cc\
  common/getopt.cc common/str.cc commonhelp.cc utils.cc hashterm.cc loadfile.cc\
